[project]
name = "neuro-logging"
description = "Logging client for Neu.ro platform services"
readme = "README.md"
authors = [
    { name = "Andrew Svetlov", email = "andrew.svetlov@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "aiohttp[speedups]>=3.11.3",
    "orjson>=3.10.12",
    "python-json-logger>=3.2.1",
    "sentry-sdk>=2.19.2,<2.48",
]
dynamic = ["version"]
license = "Apache-2.0"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
]

[dependency-groups]
dev = [
    "dirty-equals==0.11",
    "mypy==1.19.1",
    "mypy-extensions==1.1.0",
    "pre-commit==4.5.1",
    "pytest==9.0.2",
    "pytest-aiohttp==1.1.0",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.0.0",
]

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning]
fallback-version = "0.0.0"  # for dependabot

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = [
    "E", "F", "I", "C90", "UP", "B", "ASYNC", "N", "A", "C4", "EM", "FA", "ICN",
    "G", "PIE", "T20", "PYI", "PT", "RET", "PTH", "T10"
]
ignore = [
  "A001",  # Variable `credits` is shadowing a Python builtin
  "A002",  # Function argument `credits` is shadowing a Python builtin
  "A003",  # Class attribute "..." is shadowing a Python builtin
  "N818",
  "C901",  # ... is too complex
]

[tool.ruff.lint.isort]
combine-as-imports = true
lines-after-imports = 2

[tool.pytest]
addopts=[
    "-vv",
    "--cov-report=term-missing:skip-covered",
]
asyncio_mode = "auto"
log_cli = false
log_level = "INFO"

[tool.coverage.run]
branch = true
source = ["neuro_logging"]

[tool.mypy]
packages = ["neuro_logging", "tests"]
strict = true
pretty = true

[tool.uv.workspace]
members = [
    ".",
]

[tool.uv.sources]
neuro-admin-client = { workspace = true }
